fixed border-radius flicker on Profile-pic

--- a/src/Components/About/_about.scss
+++ b/src/Components/About/_about.scss
@@ -7,15 +7,12 @@
 
 //Grid-template-area Items
 .item-a {
-  border-radius: 50%;
-  background-color: rgba(193, 193, 193, 0.578);
   display: flex;
   grid-area: profilePic;
 
   img {
-    // border-radius: none;
+    border-radius: none;
     object-fit: cover;
-    // transition: border-radius .4s ease;
     width: 100%;
   }
   .first-pic {
@@ -91,20 +88,14 @@
 //If hover-capable device, do overlay on hover
 @media (hover: hover) {
   .item-a:hover {
-    // border-radius: 50%;
-    border-radius: none;
-    background-color: none;
-    // overflow: hidden;
-
     img {
-      // border-radius: 50%;
+      border-radius: 50%;
     }
     .first-pic {
       display: none;
     }
     .second-pic {
       animation: fadeIn 1s 0s;
-      border-radius: 50%;
       display: inline-block;
     }
   }
